# HandyGram

./: .gitignore  .metadata  LICENSE  README.md  analysis_options.yaml  compile_vectors.sh  crowdin.yml  firebase.json  pubspec.yaml
android/: build.gradle  gradle.properties  settings.gradle
android/app/: build.gradle  google-services.json  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  OpusEncoder.cpp  WaveformGenerator.cpp
android/app/src/main/cpp/libopusenc/: CMakeLists.txt  README.md
android/app/src/main/cpp/libopusenc/include/: opusenc.h
android/app/src/main/cpp/libopusenc/src/: opusenc.c
assets/vectors/compiled/: chat.vec  handygram_nopad.vec  info.vec  notification.vec  proxy.vec  storage.vec  theme.vec
generator/: README.md  class.tmpl  converter.tmpl  generator.dart
lib/: firebase_options.dart  main.dart
lib/l10n/: intl_af.arb  intl_be.arb  intl_de.arb  intl_el.arb  intl_en.arb  intl_es.arb  intl_it.arb  intl_kk.arb  intl_pl.arb  intl_pt.arb  intl_ru.arb  intl_sr.arb  intl_uk.arb
lib/src/: app.dart  main.dart
lib/src/common/log/: log.dart  (+1 more)
lib/src/components/: paddings.dart  scaled_sizes.dart
lib/src/misc/: color.dart  log.dart  native_utils.dart  settings_db.dart  tdlib_utils.dart  utils.dart
lib/src/pages/: audio_player.dart  chat.dart  chat_info.dart  chat_menu.dart  gif_message.dart  greeting.dart  home.dart  informator.dart  login.dart  message_menu.dart  mini_player.dart  photo_viewer.dart  pre_attach_page.dart  pre_settings.dart  reactions_chooser.dart  settings.dart  sticker_message.dart  tdlib_loader.dart  text_message.dart  voice_message.dart  wear_shape_chooser.dart
lib/src/router/: router.dart
lib/src/tdlib/: td_api.dart  td_client.dart
lib/src/telegram/: actions.dart  api_config.dart  chats.dart  functions.dart  images.dart  loadfile.dart  login.dart  messages.dart  session.dart  tdlib.dart  users.dart
lib/src/widgets/: chat_image.dart  chat_tile.dart  list.dart  loading_box.dart  micro_player.dart  rotary_wrapper.dart  scaled_aspect_ratio.dart  textbox.dart  thumbnail.dart
test/: widget_test.dart
(+1158 files in other folders)
